--- a/part2/courseinfo/public/index.html
+++ b/part2/courseinfo/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />   
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Part 1</title>
+    <title>Part 2-Course Info</title>
   </head>
   <body>
       <div id="root"></div>
